tests/baselines/reference/overloadOnConstAsTypeAnnotation.errors.txt
tests/cases/compiler/overloadOnConstAsTypeAnnotation.ts(1,37): error TS1005: ';' expected.
tests/cases/compiler/overloadOnConstAsTypeAnnotation.ts(1,8): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.


==== tests/cases/compiler/overloadOnConstAsTypeAnnotation.ts (2 errors) ====
    var f: (x: 'hi') => number = ('hi') => { return 1; };
                                        ~~
!!! error TS1005: ';' expected.
           ~~~~~~~~~~~~~~~~~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.